--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -59,7 +59,7 @@ gui:
 git:
   paging:
     colorArg: always
-    useConfig: false
+    pager: diff-so-fancy
   commit:
     signOff: false
   merging:
