--- a/compose-devtools.yml
+++ b/compose-devtools.yml
@@ -1,16 +1,40 @@
-version: '3.5'
-
 services:
-  redisinsight:
-    container_name: 'redisinsight'
-    image: redislabs/redisinsight:latest
-    ports:
-      - '8001:8001'
-    volumes:
-      - ~/data/redisinsight:/db
-    networks:
-      - redis
-    restart: unless-stopped
+  # redisinsight:
+  #   container_name: 'redisinsight'
+  #   image: redislabs/redisinsight:latest
+  #   ports:
+  #     - '8001:8001'
+  #   volumes:
+  #     - ~/data/redisinsight:/db
+  #   restart: unless-stopped
+    # networks:
+    #   - cache
+  dragonfly:
+      image: 'docker.dragonflydb.io/dragonflydb/dragonfly'
+      ulimits:
+        memlock: -1
+      ports:
+        - "6379:6379"
+      # For better performance, consider `host` mode instead `port` to avoid docker NAT.
+      # `host` mode is NOT currently supported in Swarm Mode.
+      # https://docs.docker.com/compose/compose-file/compose-file-v3/#network_mode
+      # network_mode: "host"
+      volumes:
+        - ~/data/dragonfly:/data
+      restart: unless-stopped
+      networks:
+        - cache
+
+  # redis:
+  #     image: redis:6.2-alpine
+  #     restart: always
+  #     ports:
+  #       - '6379:6379'
+  #     command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+      # networks:
+      #   - cache
+  #     volumes: 
+  #       - ~/data/dragonfly:/data
 
   rabbitmq:
     image: rabbitmq:3-management-alpine
@@ -66,7 +90,7 @@ services:
     restart: unless-stopped
 
 networks:
-  redis:
+  cache:
     driver: bridge
   postgres:
     driver: bridge
