--- a/.gitconfig
+++ b/.gitconfig
@@ -1,15 +1,18 @@
 [core]
 	autocrlf = input
+        editor = nvim
 [credential "https://gitlab.com"]
-  provider = generic
+        provider = generic
 [alias]
-  rl = reflog --date=relative
+        rl = reflog --date=relative
 [credential]
-  helper = /mnt/c/Program\\ Files/Git/mingw64/libexec/git-core/git-credential-manager-core.exe
+        helper = /mnt/c/Program\\ Files/Git/mingw64/libexec/git-core/git-credential-manager-core.exe
 
 [user]
   name = Oleh Talaver
   email = o.talaver@easygenerator.com
 
-[includeIf "gitdir:~/projects/personal/"]
+[includeIf "gitdir:~/projects/registry/"]
 	path = .gitconfig.personal
+[diff]
+	external = difft
