--- a/compose-devtools.yml
+++ b/compose-devtools.yml
@@ -1,14 +1,18 @@
 services:
-  # redisinsight:
-  #   container_name: 'redisinsight'
-  #   image: redislabs/redisinsight:latest
-  #   ports:
-  #     - '8001:8001'
-  #   volumes:
-  #     - ~/data/redisinsight:/db
-  #   restart: unless-stopped
-    # networks:
-    #   - cache
+  neo4j:
+      image: neo4j:5.3
+      container_name: neo4j
+      restart: unless-stopped
+      ports:
+        - 7474:7474
+        - 7687:7687
+      volumes:
+        - ~/data/neo4j/conf:/conf
+        - ~/data/neo4j/data:/data
+        - ~/data/neo4j/import:/import
+        - ~/data/neo4j/logs:/logs
+        - ~/data/neo4j/plugins:/plugins
+
   dragonfly:
       image: 'docker.dragonflydb.io/dragonflydb/dragonfly'
       container_name: 'dragonfly'
